Tempo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: tempo
spec:
  selector:
    app: tempo
  ports:
    - name: http-query
      port: 3200
      targetPort: 3200
      protocol: TCP
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
    - name: otlp-http
      port: 4318
      targetPort: 4318
      protocol: TCP
  type: LoadBalancer
